definitions/oneup/stage/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oneup
  namespace: oneup-stage
spec:
  replicas: 1
  minReadySeconds: 2
  progressDeadlineSeconds: 120
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: oneup
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: oneup
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: agentpool
                    operator: In
                    values:
                      - userpool
      securityContext:
        runAsUser: 1000
      containers:
        - name: oneup-app
          securityContext:
            runAsUser: 1000
          image: acrlhggixiservicesp.azurecr.io/oneup:20240206.2
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - >
                    php artisan optimize:clear;
                    php artisan config:cache;
                    php artisan migrate --force;
                  # php artisan down --secret="maintenance" --render="maintenance.index";
          resources:
            requests:
              cpu: 250m
              memory:  512Mi
            limits:
              cpu: 842m
              memory:  2560Mi
          volumeMounts:
            - name: apache-config
              mountPath: /etc/apache2/sites-enabled/
              readOnly: true
            - name: ssl
              mountPath: /var/www/html/ssl/
              readOnly: true
            - name: redis
              mountPath: /var/www/html/ssl/redis/
              readOnly: true
            - name: oneup-storage
              mountPath: /var/www/html/storage/app/
            - mountPath: /tmp
              name: tmp
          ports:
            - containerPort: 8000
              name: oneup
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: apache-config
          configMap:
            name: apache-config
            defaultMode: 420
            items:
              - key: config
                path: 000-default.conf
        - name: ssl
          secret:
            secretName: oneup-tls-2024
            defaultMode: 0644
            items:
              - key: mysql-attr-ssl-ca
                path: DigiCertGlobalRootG2.crt.pem
              - key: mysql-attr-ssl-key
                path: BaltimoreCyberTrustRoot.crt.pem
              - key: mysql-flex-ssl-ca
                path: DigiCertGlobalRootCA.crt.pem
        - name: redis
          secret:
            secretName: redis-tls
            defaultMode: 0644
            items:
              - key: ca.crt
                path: ca.crt
              - key: redis-client.crt
                path: redis-client.crt
              - key: redis-client.key
                path: redis-client.key
        - name: oneup-storage
          azureFile:
            secretName: azure-file-secret
            shareName: oneup-stage
            readOnly: false
        - emptyDir: { }
          name: tmp
---
apiVersion: v1
kind: Service
metadata:
  name: oneup
  namespace: oneup-stage
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: oneup
  selector:
    app: oneup
